2005-04-12  Julian Foad  <julianfoad@btopenworld.com>

 	* tests/bre.tests: Enable a regression test for bug #9519.
 	* src/grep.c: Fix a seg-fault in "-o -i": patch #1939.
 	* tests/foad1.sh: New tests for "-o", initially all failing.
	* tests/Makefile.am: Include the new tests file "foad1.sh".
 	* tests/spencer2.sh: Be consistent with "spencer1.sh" in the
	  naming of associated files.
	* src/grep.c: Fix off-by-one error in prpending().
	  Patch #3840 by Claudio Fontana.
	* tests/foad1.sh: Add tests by Pavol Gono for patch #3840.
	  Some of them still fail, but no longer seg-fault due to that bug.

2005-04-11  Julian Foad  <julianfoad@btopenworld.com>

 	* doc/grep.texi, doc/grep.1: Document USG grep -s too.
	  Based on a patch by Paul Eggert; suggested by Keith Marshall.
	* src/dfa.c (lex): Fix bug #9519: "echo do^re | grep do^re" was
	  failing to find a match.

2005-03-09  Stepan Kasal  <kasal@ucw.cz>

	* src/search.c (EGexecute, Fexecute): Use xmalloc, not malloc.
	(EGexecute): Handle the failure in one place, goto there.

2005-02-26  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (get_nondigit_option): Don't give up too early.
	* src/search.c (Pexecute): Add a comment explaining that this
	  situation should not happen.

2005-02-22  Claudio Fontana  <sick_soul@users.sourceforge.net>  (tiny change)

	* src/search.c (Pexecute): Consider eof case when delimiting
	  matching line.  Fixes bug #4531.

2005-02-23  Julian Foad  <julianfoad@btopenworld.com>

	* po/ko.po: Fix email address.
	* README-alpha: Fix email addresses and clarify the notes.
	* tests/backref.sh: Fix trivial typos.

2005-02-08  Bruno Haible  <bruno@clisp.org>  (tiny change)

	* src/kwset.h (kwsincr, kwsprep): Change return type to 'const char *'.
	* src/kwset.c (kwsincr, kwsprep): Likewise.

2005-02-08  Arnold D. Robbins  <arnold@skeeve.com>
	    Stepan Kasal  <kasal@ucw.cz>

	* src/mbsupport.h: Don't say the file is part of GAWK.
	Make wording in explanatory comment more generic.
